[ML] Removing legacy code from ML/transform auditor
The ML/transform auditor had support for running in
a mixed version cluster containing nodes that didn't
understand composable templates.

This functionality is no longer required in version
8, so this PR removes it.